# scratch

./: .gitignore  Cargo.toml  README.md
public/: index.html  large.html
src/: lib.rs  main.rs
src/net/: http.rs  lib.rs  mod.rs  parser.rs  request.rs  tcp.rs  util.rs
src/net/http/: common.rs  file_server.rs  mod.rs  request.rs  response.rs  router.rs  server.rs
src/thread/: mod.rs
