[package]
name = "scratch"
version = "0.1.0"
authors = ["Desislava Belokonska <desislava.belokonska@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scratch"
path = "src/lib.rs"

[dependencies]
nix = "0.17.0"
