[package]
name = "scratch"
version = "0.1.0"
authors = ["Desislava Belokonska <desislava.belokonska@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scratch"
path = "src/lib.rs"

[[bin]]
name = "file-server"
path = "src/bin/file-server.rs"

[dependencies]
nix = "0.17.0"
mime_guess = "2.0.3"
log = "0.4"
pretty_env_logger = "0.4"
num_cpus = "1.12.0"
