[package]
name = "scratch"
version = "0.1.0"
authors = ["Desislava Belokonska <desislava.belokonska@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scratch"
path = "src/lib.rs"

[[bin]]
name = "file-server"
path = "src/bin/file-server.rs"

[dependencies]
nix = "0.17.0" # safe libc implementation
mime_guess = "2.0.3" # guess mime type from file path
log = "0.4" # the standard logger library
pretty_env_logger = "0.4" # prettier formattting for logs
num_cpus = "1.12.0" # count the number of CPUs on the current machine.
handlebars = "3.0.1" # templating engine
serde = { version = "1.0", features = ["derive"] } # serialization library
